--- a/src/components/home_page/ServiceCard.css
+++ b/src/components/home_page/ServiceCard.css
@@ -44,4 +44,5 @@
 
 .service-card-button:hover {
     background-color: #003366; /* darker shade of blue for hover effect */
+    cursor : pointer;
 }
